# writeragent

./: .coverage  .gitignore  .semgrepignore  AGENTS.md  AUDIT_GROUP_02_RESULTS.md  CODEBASE_COMPARISON.md  CONTRIBUTING.md  DYNAMIC_LAYOUT.md  LOCALIZATION_COMPLETE_PLAN.md  MIGRATION_PLAN_TO_LOCALWRITER2.md  Makefile  QwenCostello.odt  README.md  TECH_DEBT_NOTES.md  TOOL_LOOP_ERRORS.md  apply-pr.sh  benchmark.py  benchmark_csv.py  benchmark_format.py  benchmark_write_formula_range.py  check_dead.py  check_handler_methods.py  check_methods.py  check_options_handler_methods2.py  check_options_methods.py  check_service_info.py  cleanup_commit.patch  complexity_report.txt  dead_code_report.txt  filter_log_test.py  fix_exceptions.py  fix_prompt_function.py  get_classes.py  localwriter.json.example  patch_more_reverts.py  patch_reverts.py  pyproject.toml  refactor_legacy_ui.py  reproduce_main_test.py  requirements-vendor.txt  (+15 more)
.semgrep/: uno_thread_safety.ok.py  uno_thread_safety.violations.py  uno_thread_safety.yml
Showcase/: GLM5Resume.odt  IvermectinExplanation.odt
WriterAgent.egg-info/: PKG-INFO  SOURCES.txt
compute_service/: Dockerfile  README.md  __init__.py  config.py  executor.py  json_egress.py  python-compute.example.json  server.py  start.sh  test_server.py
contrib/audio/: _cffi_backend.cp311-win_arm64.pyd  _cffi_backend.cp312-win_arm64.pyd  _cffi_backend.cp314-win_amd64.pyd  _cffi_backend.cp314-win_arm64.pyd  sounddevice.py
contrib/vec_pack/: __init__.py  pack.cp311-win_amd64.pyd  pack.cp311-win_arm64.pyd  pack.cp312-win_amd64.pyd  pack.cp312-win_arm64.pyd  pack.cp313-win_amd64.pyd  pack.cp313-win_arm64.pyd  pack.cp314-win_amd64.pyd  pack.cp314-win_arm64.pyd
docs/: ROADMAP.md  TEST_IMPROVEMENTS.md  TYPE_CHECKING_FINAL_SUMMARY.md  TYPE_CHECKING_SUCCESS.md  agent-memory-and-skills.md  agent-search.md  agent-threading-issue.md  agent_architectures_analysis.md  analysis-sub-agent.md  audio-architecture.md  benchmark-cli-dev-plan.md  bookmarks-api-reference.md  brainstorming-mode.md  bug-reporting.md  calc-analysis-tools.md  calc-blanks-vs-nans.md  calc-conditional-formatting.md  calc-integration.md  calc-sheet-filter-roadmap.md  calc-sheet-filter.md  calc-specialized-toolsets.md  calc-spreadsheet-to-python-import.md  chat-sidebar-implementation.md  code-quality-improvements.md  collabora-online-ai-comparison.md  connection-management.md  cursor-suggestions.md  cython-extension.md  diffusers-comfyui-image-backend-dev-plan.md  draw-impress-specialized-toolsets.md  dspy-prompt-optimization-plan.md  duckdb-calc-dev-plan.md  dynamic-layout.md  embedded-rich-text-chat-sidebar-debug.md  embeddings.md  enabling_numpy_in_libreoffice.md  eval-dev-plan.md  evaluation-plan.md  features_2026-02-21.md  formal_verification.md  (+74 more)
docs/architecture/: chat-sidebar-implementation.md
docs/archive/: MISTRAL_IMPROVEMENTS2.md  QWENDEV_FEATURES.md  SETTINGS_CONVERSION_DEV_PLAN.md  agent-threading-issue.md  eval-ideas.md
docs/dev/: NOTES_FOR_IMPROVEMENT.md  chatbot-similarity-localwriter2.md  dynamiclayout.md  langchain-core_memory_in_localwriter.md  litellm-integration-old.md
docs/features/: image-generation.md
docs/mail_merge/: README_EXTERNAL.md  mail_merge_external.py
docs/robustness/: TASK_03_NETWORK_RESILIENCE.md  TASK_09_MODULE_SPECIFIC.md  TASK_10_INTEGRATION_TESTING.md
docs/uno-api/: layout-api-reference.md
extension/: Accelerators.xcu  Addons.xcu  Jobs.xcu  ProtocolHandler.xcu  XPromptFunction.rdb  XPythonFunction.rdb  description.xml  description.xml.tpl
extension-core/: Addons.xcu  Jobs.xcu  ProtocolHandler.xcu  XPythonFunction.rdb  description.xml.tpl
extension-core/idl/: XPythonFunction.idl
extension-harper/: description.xml.tpl  module.yaml
extension/Dialogs/: EditInputDialog.xdl  ErrorReportDialog.xdl  EvalDialog.xdl  PythonSidebarDialog.xdl  PythonTestProgressDialog.xdl  SettingsDialog.xdl.tpl  ShortTextInputDialog.xdl  StatusUpdateDialog.xdl  WebSearchQueryEditDialog.xdl  dialog.xlb  dialog.xlb.tpl  script.xlb
extension/LocalWriterDialogs/: ChatPanelDialog.xdl  SettingsDialog.xdl  SettingsDialog.xdl.tpl
extension/WriterAgentDialogs/: ChatPanelDialog.xdl  EditInputDialog.xdl  LatexInputDialog.xdl  MsgBoxWithCopyDialog.xdl  PythonScriptDialog.xdl  SearchDialog.xdl  ServerStatusDialog.xdl  SettingsDialog.xdl.tpl  SpreadsheetImportDialog.xdl  (+3 more)
locales/: README.md  writeragent.pot
localwriter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
native/writeragent_vec/: README.md  pyproject.toml  setup.py
native/writeragent_vec/src/writeragent_vec/: __init__.py  pack.pyx
plugin/: __init__.py  _manifest.py  main.py  main_core.py  options_handler.py  plugin.yaml  prompt_function.py  testing_runner.py  update.xml.tpl  version.py
scripts/: __init__.py  analyze_tool_call_timing.py  bench_broker.py  bench_embeddings.py  bench_serialization.py  bench_warm_numpy.py  benchmark.py  build_libreharper_oxt.py  build_librepy_locales.py  build_librepy_oxt.py  build_oxt.py  check-setup.ps1  check-setup.sh  clean-cache.ps1  clean-cache.sh  clear_logs.sh  convert_excel_py.py  cython-speed-v1.txt  cython-speed-v3.txt  debug-grammar-writing-aids.sh  dev-deploy.ps1  dev-deploy.sh  dump_embeddings_cache.py  dump_embeddings_locale_runs.py  dump_web_research_cache.py  eval_folder_search_routing.py  extract_xdl_strings.py  fix_uno_import.py  generate_coverage.sh  generate_full_super_unified_diagram.py  generate_grammar_checker_diagram.py  generate_language_map.py  generate_lo_test_csv.py  generate_locale_abbreviations.py  generate_manifest.py  generate_numpy_domains_demo_spreadsheet.py  generate_serialization_spreadsheet.py  generate_serialization_test_csv.py  generate_stop_words.py  generate_tool_loop_diagram.py  (+46 more)
tests/: __init__.py  conftest.py  eval_runner.py  test_config_service.py  test_event_bus.py  test_fix_uno_import.py  test_module_base.py  test_module_config_dialog.py  test_pricing.py  test_schema_convert.py  test_streaming.py  test_streaming_deltas.py  test_tool_base.py  test_tool_context.py  test_uno_context.py  testing_utils.py
website/: app.py
wiki/: SCHEMA.md
(+1817 files in other folders)
