[project]
name = "WriterAgent"
dynamic = ["version"]
description = "LibreOffice AI writing assistant with MCP server"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "polib",
    "pytest-cov>=7.1.0",
    "ty",
    "bowler",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.dynamic]
version = {attr = "plugin.version.EXTENSION_VERSION"}

[tool.setuptools.packages.find]
include = ["plugin*"]

[tool.pytest.ini_options]
testpaths = ["plugin/tests"]
addopts = "--ignore=plugin/tests/uno"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest",
    "pyyaml",
    "sounddevice",
    "dspy",
    "mypy",
    "types-requests",
    "types-unopy",
    "pyright>=1.1.408",
    "bandit[toml]>=1.8.0",
    "ruff>=0.9.0",
    "pyrefly>=0.61.0",
]

[tool.ruff]
line-length = 120
extend-exclude = [
    "plugin/contrib",
    "plugin/tests",
]

[tool.ruff.lint]
extend-select = ["TC"]
# UNO/bootstrap often uses imports after path setup; one-line if/for with colon is legacy style.
extend-ignore = ["E402", "E701"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
# Dataclass field types are evaluated at class creation; keep first-party imports out of TYPE_CHECKING.
runtime-evaluated-decorators = ["dataclasses.dataclass"]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
disable_error_code = ["annotation-unchecked"]
packages = ["plugin"]
exclude = [
    "plugin/contrib/",
    "plugin/tests/",
]

[[tool.mypy.overrides]]
module = "officehelper"
ignore_missing_imports = true

# `exclude` does not skip subpackages when using `packages = ["plugin"]`; mirror ty scope.
[[tool.mypy.overrides]]
module = "plugin.contrib.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "plugin.tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "sounddevice"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.bandit]
# Same scope as ty/mypy/pyright: extension code only (see Makefile `bandit` target).
exclude_dirs = ["plugin/contrib", "plugin/tests"]
# urllib is used intentionally for HTTP (see modules/http); B314 is ET on trusted small update.xml.
skips = ["B310", "B314"]

[tool.ty.src]
# Optional: explicitly set what to include (defaults to common patterns)
include = ["plugin"]
exclude = ["plugin/contrib", "plugin/tests"]

# Pyrefly (CLI: make pyrefly) — experimental; same scope as ty/mypy/pyright; not part of make test
[tool.pyrefly]
project-includes = ["plugin"]
project-excludes = ["plugin/contrib/**", "plugin/tests/**"]
python-version = "3.11"
# Repo root so `from plugin...` inside `if TYPE_CHECKING:` resolves; Pyrefly treats TYPE_CHECKING as true.
search-path = ["."]
check-unannotated-defs = true
infer-return-types = "checked"
infer-with-first-use = true

# Pyright (CLI: make pyright) — same scope as ty/mypy; uses .venv for stubs (types-unopy) and UNO via make fix-uno
[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["plugin"]
exclude = ["plugin/contrib", "plugin/tests"]
reportMissingModuleSource = false
