[project]
name = "WriterAgent"
dynamic = ["version"]
description = "LibreOffice AI writing assistant with MCP server"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "polib",
    "pytest-cov>=7.1.0",
    "ty",
    "bowler",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools.dynamic]
version = {attr = "plugin.version.EXTENSION_VERSION"}

[tool.setuptools.packages.find]
include = ["plugin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/uno --ignore=tests/scripting/test_serialization_verification.py"
markers = [
    "slow: excluded from default pytest; run via make slowtests",
    "integration: full subprocess worker IPC (optional, slower)",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "latex2mathml",
    "json-repair",
    "snowballstemmer",
    "websockets>=13.0,<16",
    "pytest",
    "pyyaml",
    "sounddevice",
    "mypy",
    "types-requests",
    "types-unopy",
    "pyright>=1.1.408",
    "bandit[toml]>=1.8.0",
    "ruff>=0.9.0",
    "pyrefly>=0.61.0",
    "openpyxl>=3.1.0",
    "odfpy>=1.4.0",
    "python-docx>=1.1.0",
    "xlrd>=2.0.0",
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "spacy",
    "textdescriptives",
    "statsmodels",
    "ydata-profiling",
    "pandas-montecarlo",
    "sympy",
    "pint",
    "matplotlib",
    "deal",
    "crosshair-tool",
    "hypothesis",
    "Cython",
    "setuptools",
    "build",
    "sqlite-vec",
    "css-inline",
    "py-spy",
    "Pillow",
    "semgrep>=1.76.0",
]

[tool.ruff]
line-length = 300
extend-exclude = [
    "plugin/contrib",
    "plugin/lib",
    "plugin/tests",
    "tests",
    "plugin/scripting/text_analytics.py",
]

# Collapse multi-line calls when they fit line-length; do not treat a trailing comma as “keep expanded”.
[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = ["TC"]
# UNO/bootstrap often uses imports after path setup; one-line if/for with colon is legacy style.
extend-ignore = ["E402", "E701"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true
# Dataclass field types are evaluated at class creation; keep first-party imports out of TYPE_CHECKING.
runtime-evaluated-decorators = ["dataclasses.dataclass"]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
ignore_missing_imports = true
disable_error_code = ["annotation-unchecked"]
packages = ["plugin"]
exclude = [
    "plugin/contrib/",
    "plugin/lib/",
    "plugin/tests/",
    "tests/",
    "plugin/scripting/text_analytics.py",
]

[[tool.mypy.overrides]]
module = "officehelper"
ignore_missing_imports = true

# `exclude` does not skip subpackages when using `packages = ["plugin"]`; mirror ty scope.
[[tool.mypy.overrides]]
module = "plugin.contrib.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "plugin.lib.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "plugin.scripting.text_analytics"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "sounddevice"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.bandit]
# Same scope as ty/mypy/pyright: extension code only (see Makefile `bandit` target).
exclude_dirs = ["plugin/contrib", "plugin/lib", "plugin/tests", "tests", "plugin/scripting/text_analytics.py"]
# urllib is used intentionally for HTTP (see modules/http); B314 is ET on trusted small update.xml.
skips = ["B310", "B314", "B608"]

[tool.ty.src]
# Optional: explicitly set what to include (defaults to common patterns)
include = ["plugin"]
exclude = ["plugin/contrib", "plugin/lib", "plugin/tests", "plugin/xdl_strings.py", "tests", "plugin/scripting/text_analytics.py"]

# Pyrefly (CLI: make pyrefly) — experimental; same scope as ty/mypy/pyright; not part of make test
[tool.pyrefly]
project-includes = ["plugin"]
project-excludes = ["plugin/contrib/**", "plugin/lib/**", "plugin/tests/**", "tests/**", "plugin/scripting/text_analytics.py"]
python-version = "3.11"
# Repo root so `from plugin...` inside `if TYPE_CHECKING:` resolves; Pyrefly treats TYPE_CHECKING as true.
search-path = ["."]
check-unannotated-defs = true
infer-return-types = "checked"
infer-with-first-use = true

# Pyright (CLI: make pyright) — same scope as ty/mypy; uses .venv for stubs (types-unopy) and UNO via make fix-uno
[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
include = ["plugin"]
exclude = ["plugin/contrib", "plugin/lib", "plugin/tests", "tests", "plugin/scripting/text_analytics.py"]
reportMissingModuleSource = false
reportMissingImports = "none"

[tool.coverage.run]
source = ["plugin/framework"]

[tool.coverage.report]
show_missing = true
